bookinfo-mysql-multiple-ns/ossm/istio-system/dr-mysql-ddbb.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: egress-mysql
  namespace: istio-system
spec:
  host: mysql.external
  exportTo:
    - .
  subsets:
  - name: v2-mysql
    trafficPolicy:
      tls:
        mode: DISABLE
