bookinfo-mysql-multiple-ns/ossm/istio-system/route-bookinfo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-custom
  namespace: istio-system
spec:
  host: bookinfo-custom.$EXTERNAL_DOMAIN
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
