bookinfo-mysql-multiple-ns/ossm/istio-system/se-mysql-ddbb.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: mysql
  namespace: istio-system
spec:
  exportTo:
  - '.'
  endpoints:
  - address: mysql-1.ddbb.svc.cluster.local
    ports:
      tcp: 3306
    weight: 30
  - address: mysql-2.ddbb.svc.cluster.local
    ports:
      tcp: 3306
    weight: 30
  - address: mysql-3.ddbb.svc.cluster.local
    ports:
      tcp: 3306
    weight: 40
  hosts:
  - mysql.external
  location: MESH_EXTERNAL
  ports:
  - name: tcp
    number: 3306
    protocol: TCP
  resolution: DNS
