bookinfo-mysql-multiple-ns/ossm/istio-system/vs-mysql-ddbb.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mysql
  namespace: istio-system
spec:
  exportTo:
  - .
  gateways:
  - istio-tcp-egress
  hosts:
  - mysql.external
  tcp:
  - match:
    - gateways:
      - istio-tcp-egress
      port: 10843
    route:
    - destination:
        host: mysql.external
        subset: v2-mysql
      weight: 100
